--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<header>
+  <div>
+    <img src="assets/logo.svg" alt="Logo">
+    <span>Quizz</span>
+  </div>
+</header>
