--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,5 +1,9 @@
 header {
-    background: #eee;
+    display: flex;
+    align-items: center;
+    height: 3rem;
+    padding-left: 0.3em;
+    background: #ddd;
     font-size: 2em;
 }
 
