--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,11 @@
 html, body {
     height: 100%;
 }
+
+button {
+    border: none;
+    background: #ddd;
+    padding: 0.5em 1em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+}
