--- a/src/app/layout/body/body.component.scss
+++ b/src/app/layout/body/body.component.scss
@@ -1,3 +1,20 @@
 :host {
     flex-grow: 1;
 }
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+button {
+    font-size: 1.5em;
+    width: 8em;
+    height: 8em;
+
+    @media only screen and (max-width: 500px) {
+        font-size: 1em;
+    }
+}
