--- a/src/app/layout/body/body.component.html
+++ b/src/app/layout/body/body.component.html
@@ -1,4 +1,3 @@
 <main>
-    <button>Crée ton Quizz&nbsp;!</button>
-    <button disabled>Fais un Quizz&nbsp;!</button>
+    <router-outlet></router-outlet>
 </main>
