--- a/src/app/routes/create/create.component.html
+++ b/src/app/routes/create/create.component.html
@@ -1,3 +1,8 @@
-<p>
-  create works!
-</p>
+<form [formGroup]="f" (ngSubmit)="submit()">
+
+  <label>
+    <div>Nom du Quizz*</div>
+    <input type="text">
+  </label>
+  <button>Suivant</button>
+</form>
