--- a/src/app/routes/questions/questions.component.html
+++ b/src/app/routes/questions/questions.component.html
@@ -1,3 +1,6 @@
-<p>
-  questions works!
-</p>
+<div>
+  <span>Quizz: {{name}}</span>
+  <span>Nombre de questions : {{nbr}}</span>
+  <button routerLink="/add-question">Ajouter une question</button>
+  <button routerLink="/saved">Sauver le quizz</button>
+</div>
