--- a/src/app/routes/add-question/add-question.component.html
+++ b/src/app/routes/add-question/add-question.component.html
@@ -1,3 +1,23 @@
-<p>
-  add-question works!
-</p>
+<form [formGroup]="f" (ngSubmit)="submit()">
+
+  <label>
+    <div>Texte de la question*</div>
+    <textarea rows="3" formControlName="label"></textarea>
+  </label>
+  <div>
+    <div>
+      <input type="text">
+      <input type="text">
+      <input type="text">
+      <input type="text">
+    </div>
+    <div>
+      <input type="radio">
+      <input type="radio">
+      <input type="radio">
+      <input type="radio">
+    </div>
+  </div>
+  <button type="button" routerLink="/questions">Annuler</button>
+  <button [disabled]="f.invalid">Ajouter la question</button>
+</form>
