--- a/src/app/routes/saved/saved.component.html
+++ b/src/app/routes/saved/saved.component.html
@@ -1,3 +1,6 @@
-<p>
-  saved works!
-</p>
+<div>
+  <fa-icon [icon]="faSmileWink"></fa-icon>
+  <p><b>Bravo !</b></p>
+  <p>Ton quizz est bien enregistré.</p>
+  <button routerLink="/">Retour à l'accueil</button>
+</div>
