--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,10 @@
 
 @import './scss/variables';
 
+* {
+    box-sizing: border-box;
+}
+
 html,
 body {
     height: 100%;
@@ -13,25 +17,47 @@ body {
 }
 
 [routerLink] {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 button {
     cursor: pointer;
-    border: none;
+    border: 1px solid $background-color;
     background: $background-color;
     padding: 0.5em 1em;
     margin-left: 0.5em;
     margin-right: 0.5em;
 
     &:hover {
+        border-color: darken($background-color, 10);
         background: darken($background-color, 10);
     }
+
     &:active {
+        border-color: darken($background-color, 15);
         background: darken($background-color, 15);
     }
+
     &[disabled] {
         cursor: default;
+        border-color: lighten($background-color, 5);
         background: lighten($background-color, 5);
     }
+}
+
+label {
+  display: block;
+  padding: 0.5em 0;
+}
+
+input {
+    border: 1px solid #aaa;
+    padding: 0.5em;
+    width: 100%;
+}
+
+.max-width {
+    padding: 0 0.5em;
+    max-width: 20em;
+    width: 100%;
 }
