--- a/src/app/routes/questions/questions.component.html
+++ b/src/app/routes/questions/questions.component.html
@@ -1,6 +1,9 @@
-<div>
-  <span>Quizz: {{name}}</span>
-  <span>Nombre de questions : {{nbr}}</span>
-  <button routerLink="/add-question">Ajouter une question</button>
-  <button routerLink="/saved">Sauver le quizz</button>
+<div class="max-width">
+  <div class="text">Quizz: <b>{{name}}</b></div>
+  <div class="text">Nombre de questions : <b>{{nbr}}</b></div>
+  <div class="buttons">
+    <button routerLink="/add-question">Ajouter une question</button>
+    <button routerLink="/saved">Sauver le quizz</button>
+  </div>
+
 </div>
