--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div routerLink="/">
+  <div routerLink="/" class="logo">
     <img src="assets/logo.svg" alt="Logo">
     <span>Quizz</span>
   </div>
