--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -2,7 +2,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3rem;
+    height: 4em;
     flex-grow: 0;
     background: #ddd;
 }
