--- a/src/app/routes/questions/questions.component.html
+++ b/src/app/routes/questions/questions.component.html
@@ -1,8 +1,8 @@
 <div class="max-width">
-  <div class="text">Quizz: <b>{{name}}</b></div>
+  <div class="text">Quizz: <b>{{quizz.currentQuizz.name}}</b></div>
   <div class="text">Nombre de questions : <b>{{nbr}}</b></div>
   <div class="buttons">
-    <button routerLink="/add-question">Ajouter une question</button>
+    <button routerLink="/add-question" class="primary">Ajouter une question</button>
     <button routerLink="/saved">Sauver le quizz</button>
   </div>
 
