--- a/src/app/routes/questions/questions.component.html
+++ b/src/app/routes/questions/questions.component.html
@@ -1,9 +1,9 @@
 <div class="max-width">
   <div class="text">Quizz: <b>{{quizz.currentQuizz.name}}</b></div>
-  <div class="text">Nombre de questions : <b>{{nbr}}</b></div>
+  <div class="text">Nombre de questions : <b>{{quizz.currentQuizz.questions.length}}</b></div>
   <div class="buttons">
     <button routerLink="/add-question" class="primary">Ajouter une question</button>
-    <button routerLink="/saved">Sauver le quizz</button>
+    <button routerLink="/saved" *ngIf="quizz.currentQuizz.questions.length > 0">Sauver le quizz</button>
   </div>
 
 </div>
