--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@ body {
 body {
     font-size: 1.5vw;
     font-family: 'Roboto', sans-serif;
+
     @media only screen and (max-width: 500px) {
         font-size: 1em;
     }
@@ -52,23 +53,32 @@ button {
         color: white;
         background-color: $primary-background-color;
         border-color: $primary-background-color;
+
         &:hover {
             border-color: lighten($primary-background-color, 10);
             background: lighten($primary-background-color, 10);
         }
+
         &:active {
             border-color: lighten($primary-background-color, 15);
             background: lighten($primary-background-color, 15);
+        }
+
+        &[disabled] {
+            cursor: default;
+            border-color: lighten($background-color, 5);
+            background: lighten($background-color, 5);
         }
     }
 }
 
 label {
-  display: block;
-  padding: 0.5em 0;
+    display: block;
+    padding: 0.5em 0;
 }
 
-input, textarea {
+input,
+textarea {
     border: 1px solid #aaa;
     padding: 0.5em;
     width: 100%;
