--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,2 +1,2 @@
 <button routerLink="/create" >Crée ton Quizz&nbsp;!</button>
-<button disabled>Fais un Quizz&nbsp;!</button>
+<button *ngIf="quizz.hasAtLeastOneQuizz()">Fais un Quizz&nbsp;!</button>
