--- a/src/app/routes/saved/saved.component.html
+++ b/src/app/routes/saved/saved.component.html
@@ -2,5 +2,5 @@
   <fa-icon [icon]="faSmileWink"></fa-icon>
   <p class="big"><b>Bravo !</b></p>
   <p>Ton quizz est bien enregistré.</p>
-  <button routerLink="/">Retour à l'accueil</button>
+  <button routerLink="/" class="primary">Retour à l'accueil</button>
 </div>
