--- a/src/app/play-quizz/routes/start/start.component.html
+++ b/src/app/play-quizz/routes/start/start.component.html
@@ -2,5 +2,5 @@
   <h1>Quizz {{quizz.currentQuizz.name}}</h1>
   <p>{{quizz.currentQuizz.questions.length}}
     question{{(quizz.currentQuizz.questions.length === 1) ? '' : 's'}}</p>
-  <button class="primary">Démarrer</button>
+  <button class="primary" [routerLink]="['/', quizz.currentQuizz.name, 'answer']">Démarrer</button>
 </div>
