--- a/src/app/play-quizz/routes/answer/answer.component.html
+++ b/src/app/play-quizz/routes/answer/answer.component.html
@@ -1,3 +1,4 @@
-<p>
-  answer works!
-</p>
+<div class="max-width">
+  <h1>Quizz {{quizz.currentQuizz.name}}</h1>
+  <h2>Question {{questionId}}</h2>
+</div>
