--- a/src/app/play-quizz/routes/answer/answer.component.html
+++ b/src/app/play-quizz/routes/answer/answer.component.html
@@ -1,4 +1,5 @@
 <div class="max-width">
   <h1>Quizz {{quizz.currentQuizz.name}}</h1>
   <h2>Question {{questionId}}</h2>
+  <h3>Score : {{quizz.progress.score}} / {{quizz.currentQuizz.questions.length}}</h3>
 </div>
