--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,7 +77,7 @@ label {
     padding: 0.5em 0;
 }
 
-input,
+input:not([type="radio"]),
 textarea {
     border: 1px solid #aaa;
     padding: 0.5em;
