--- a/src/app/play-quizz/routes/score/score.component.html
+++ b/src/app/play-quizz/routes/score/score.component.html
@@ -1,3 +1,6 @@
-<p>
-  score works!
-</p>
+<div class="max-width">
+  <h1>Quizz {{quizz.currentQuizz.name}}</h1>
+  <div><fa-icon [icon]="faSmileWink"></fa-icon></div>
+  <p>Ton score : {{quizz.progress.score}} / {{quizz.currentQuizz.questions.length}}</p>
+  <button [routerLink]="['/']" routerLinkActive="router-link-active" >Retour Accueil</button>
+</div>
